Set demo page as homepage

--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "email": "mbrambilla@shadowcore.net",
     "url": "https://shadowcore.net/"
   },
-  "homepage": "https://github.com/shadeweave/sw-image#readme"
+  "homepage": "https://shadeweave.github.io/sw-image/"
 }
